# whatlang-rs

./: Cargo.toml
benches/: my_benchmark.rs
src/: detect.rs  info.rs  lib.rs  options.rs  script.rs
