[package]
name = "whatlang"
version = "0.8.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
edition = "2018"
description = "Natural language detection library. Identifies language of a given text."
keywords = ["language", "nlp", "lang", "whatlang", "text"]
license = "MIT"
repository = "https://github.com/greyblake/whatlang-rs"
homepage = "https://github.com/greyblake/whatlang-rs"
documentation = "https://docs.rs/whatlang"
readme = "README.md"
categories = ["text-processing", "algorithms"]
include = [
    "src/**/*",
    "test/**/*",
    "Cargo.toml",
    "README.md"
]

[badges]
travis-ci = { repository = "greyblake/whatlang-rs", branch = "master" }

[dependencies]
hashbrown = "0.7"
itertools = "0.9.0"

[dev-dependencies]
serde_json = "1.0.39"
criterion = "0.3"
proptest = "0.9.1"

[[bench]]
name = "my_benchmark"
harness = false
